--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -149,4 +149,12 @@
     .mobile_menu_grid_items {
         @apply rounded-md text-base font-medium text-gray-900 hover:text-gray-700;
     }
+
+    .dropdown_item {
+        @apply block px-4 py-2 text-sm text-gray-700 hover:dropdown_item_active disabled:hover:text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400;
+    }
+
+    .dropdown_item_active {
+        @apply bg-gray-100 text-gray-900;
+    }
 }
