--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,8 +1,8 @@
 {% load cards %}
 
 {% comment %} If the template is a list, show this, else hide it {% endcomment %}
-<div class="relative max-w-2xl mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
-  <div>
+<section class="relative max-w-2xl mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
+  <section>
     <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl">
       {{ title }}
     </h2>
@@ -11,10 +11,10 @@
         {{ description }}
       </p>
     </div>
-  </div>
-  <div class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
+  </section>
+  <section class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
     {% for object in object_list %}
       {% cards object %}
     {% endfor %}
-  </div>
-</div>
+  </section>
+</section>
