--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -1,92 +1,164 @@
 {% extends 'sub_base_main.html' %}
-{% load super_buttons markup_tags %}
+{% load super_buttons markup_tags cards %}
 
 {% block main %}
-  <div class="card mb-2">
-    <div class="card-header d-flex">
-      <span class="col">
-        <h2>Project #{{ project.id }}</h2>
-      </span>
-      <span class="col-auto">
-        {% if user.is_superuser %}
-          {% sb project %}
-        {% endif %}
-      </span>
-    </div>
+  {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
+    <div class="card mb-2">
+      <div class="card-header d-flex">
+        <span class="col">
+          <h2>Project #{{ project.id }}</h2>
+        </span>
+        <span class="col-auto">
+          {% if user.is_superuser %}
+            {% sb project %}
+          {% endif %}
+        </span>
+      </div>
 
-    <div class="card-body">
-      <h2 class="card-title">{{ project.title }}</h2>
-      <p class="card-text">{{ project.description }}</p>
-      {% if project.learned %}
-        <div class="card-text">
-          <span class="text-white-50 d-block">Had to learn:</span>
-          {{ project.learned|apply_markup:"markdown"|apply_markup:"widont" }}
+      <div class="card-body">
+        <h2 class="card-title">{{ project.title }}</h2>
+        <p class="card-text">{{ project.description }}</p>
+        {% if project.learned %}
+          <div class="card-text">
+            <span class="text-white-50 d-block">Had to learn:</span>
+            {{ project.learned|apply_markup:"markdown"|apply_markup:"widont" }}
+          </div>
+        {% endif %}
+      </div>
+
+      {% if project.website or project.technology %}
+        <div class="card-footer">
+          {% if project.website %}
+            <p class="card-text">Website:
+              <a target="_blank" href="{{ project.website.url }}" rel="noopener noreferrer">{{ project.website }}</a>
+            </p>
+          {% endif %}
+          {% if project.technology %}
+            <div class="card-text">
+              Made with:
+              <a target="_blank" href="{{ project.technology.website }}" rel="noopener noreferrer">{{ project.technology }}</a>
+              <br/>
+              <span>{{ project.technology.description }}</span>
+            </div>
+          {% endif %}
+          {% if project.repository %}
+            <p class="card-text">Repository:
+              <a target="_blank" href="{{ project.repository.url }}" rel="noopener noreferrer">{{ project.repository }}</a>
+            </p>
+          {% endif %}
         </div>
       {% endif %}
     </div>
 
-    {% if project.website or project.technology %}
-      <div class="card-footer">
-        {% if project.website %}
-          <p class="card-text">Website:
-            <a target="_blank" href="{{ project.website.url }}" rel="noopener noreferrer">{{ project.website }}</a>
-          </p>
-        {% endif %}
-        {% if project.technology %}
-          <div class="card-text">
-            Made with:
-            <a target="_blank" href="{{ project.technology.website }}" rel="noopener noreferrer">{{ project.technology }}</a>
-            <br/>
-            <span>{{ project.technology.description }}</span>
-          </div>
-        {% endif %}
-        {% if project.repository %}
-          <p class="card-text">Repository:
-            <a target="_blank" href="{{ project.repository.url }}" rel="noopener noreferrer">{{ project.repository }}</a>
-          </p>
-        {% endif %}
-      </div>
-    {% endif %}
-  </div>
+    <div class='text-then-hr text-small text-white-50'>
+      <span class='hr-title'><span class="me-2">{{ project.get_sub_projects.count }}
+          Sub Project{{ project.get_sub_projects.count|pluralize:'s' }}</span></span>
+    </div>
 
-  <div class='text-then-hr text-small text-white-50'>
-    <span class='hr-title'><span class="me-2">{{ project.get_sub_projects.count }}
-        Sub Project{{ project.get_sub_projects.count|pluralize:'s' }}</span></span>
-  </div>
+    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
+      {% for subproject in project.sub_project.all %}
+        <div class="mb-2 pe-0">
+          <div id="subproject-{{ subproject.slug }}" class="card shadow h-100">
 
-  <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
-    {% for subproject in project.sub_project.all %}
-      <div class="mb-2 pe-0">
-        <div id="subproject-{{ subproject.slug }}" class="card shadow h-100">
-
-          <div class="card-header">
-            <span class="d-flex">
-              <span class="col">
-                <strong class="text-white-50">Sub Project #{{ subproject.id }}</strong>
-                <p class="mb-0 text-small text-white-50">Sub Project slug:
-                  {{ subproject.slug }}</p>
+            <div class="card-header">
+              <span class="d-flex">
+                <span class="col">
+                  <strong class="text-white-50">Sub Project #{{ subproject.id }}</strong>
+                  <p class="mb-0 text-small text-white-50">Sub Project slug:
+                    {{ subproject.slug }}</p>
+                </span>
+                <span class="col-auto">
+                  {% if user.is_superuser %}
+                    {% sb subproject %}
+                  {% endif %}
+                </span>
               </span>
-              <span class="col-auto">
-                {% if user.is_superuser %}
-                  {% sb subproject %}
-                {% endif %}
+            </div>
+            <div class="card-body">
+              <h3 class="card-title mb-0">{{ subproject.title }}</h3>
+              <p class="mb-auto">{{ subproject.snippet }}</p>
+            </div>
+            <div class="card-footer">
+              <span class="d-flex">
+                <span class="col">
+                  <a class="card-link" href="{{ subproject.get_absolute_url }}">See details</a>
+                </span>
               </span>
-            </span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title mb-0">{{ subproject.title }}</h3>
-            <p class="mb-auto">{{ subproject.snippet }}</p>
-          </div>
-          <div class="card-footer">
-            <span class="d-flex">
-              <span class="col">
-                <a class="card-link" href="{{ subproject.get_absolute_url }}">See details</a>
-              </span>
-            </span>
+            </div>
           </div>
         </div>
-      </div>
-    {% endfor %}
-  </section>
-
+      {% endfor %}
+    </section>
+  {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
+    <article class="py-8 xl:py-10">
+      <section class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 xl:max-w-5xl xl:grid xl:grid-cols-3">
+        <section class="xl:col-span-2 xl:pr-8">
+          <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
+            <section>
+              <h1 class="text-2xl font-bold text-gray-900">{{ project.title }}</h1>
+              <p class="mt-2 text-sm text-gray-500">
+                Project #{{ project.id }}
+              </p>
+            </section>
+            {% if user.is_superuser %}
+              {% twsb project %}
+            {% endif %}
+          </section>
+          <section class="py-3 xl:pt-6 xl:pb-0">
+            <section class="prose lg:prose-lg xl:prose-xl">
+              <h1>{{ project.title }}</h1>
+              {% if project.learned %}
+                <div>
+                  <span class="text-white-50 d-block">Had to learn:</span>
+                  {{ project.learned|apply_markup:"markdown"|apply_markup:"widont" }}
+                </div>
+              {% endif %}
+              {% if project.website or project.technology %}
+                {% if project.website %}
+                  <p>Website:
+                    <a target="_blank" href="{{ project.website.url }}" rel="noopener noreferrer">{{ project.website }}</a>
+                  </p>
+                {% endif %}
+                {% if project.technology %}
+                  <div>
+                    Made with:
+                    <a target="_blank" href="{{ project.technology.website }}" rel="noopener noreferrer">{{ project.technology }}</a>
+                    <br/>
+                    <span>{{ project.technology.description }}</span>
+                  </div>
+                {% endif %}
+                {% if project.repository %}
+                  <p>Repository:
+                    <a target="_blank" href="{{ project.repository.url }}" rel="noopener noreferrer">{{ project.repository }}</a>
+                  </p>
+                {% endif %}
+              {% endif %}
+            </section>
+          </section>
+          {% if project.sub_project %}
+            <article class="bg-white pb-8 pt-16">
+              <section class="max-w-2xl mx-auto">
+                <section class="relative">
+                  <div class="absolute inset-0 flex items-center" aria-hidden="true">
+                    <div class="w-full border-t border-gray-300"></div>
+                  </div>
+                  <div class="relative flex justify-center">
+                    <span class="px-3 bg-white text-lg font-medium text-gray-900">
+                      {{ project.get_sub_projects.count }}
+                      Sub Project{{ project.get_sub_projects.count|pluralize:'s' }}
+                    </span>
+                  </div>
+                </section>
+              </section>
+            </article>
+            <section class="grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
+              {% for object in project.sub_project.all %}
+                {% cards object %}
+              {% endfor %}
+            </section>
+          </section>
+        </section>
+      </article>
+    {% endif %}
+  {% endif %}
 {% endblock main %}
