--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -1,6 +1,6 @@
 <h2 class="sr-only">Details</h2>
-<div class="space-y-5">
-  <div class="flex items-center space-x-2">
+<article class="space-y-5">
+  <section class="flex items-center space-x-2">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewbox="0 0 20 20" fill="currentColor">
       <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"/>
       <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"/>
@@ -18,37 +18,38 @@
     {% else %}
       <span class="text-red-500 text-sm font-medium">Withdrawn</span>
     {% endif %}
-  </div>
-  <div class="flex items-center space-x-2">
+  </section>
+  <section class="flex items-center space-x-2">
     <svg class="h-5 w-5 text-gray-400" x-description="Heroicon name: solid/chat-alt" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z" clip-rule="evenodd"></path>
     </svg>
     <span class="text-gray-900 text-sm font-medium">4 comments</span>
-  </div>
-  <div class="flex items-center space-x-2">
+  </section>
+  <section class="flex items-center space-x-2">
     <svg class="h-5 w-5 text-gray-400" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
     <span class="text-gray-900 text-sm font-medium">Created on
       {{ object.created_date|date:'D, d M Y H:i' }}</span>
-  </div>
-  <div class="flex items-center space-x-2">
+  </section>
+  <section class="flex items-center space-x-2">
     <svg class="h-5 w-5 text-gray-400" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
     <span class="text-gray-900 text-sm font-medium">Published on
       {{ object.pub_date|date:'D, d M Y H:i' }}</span>
-  </div>
-  <div class="flex items-center space-x-2">
+  </section>
+  <section class="flex items-center space-x-2">
     <svg class="h-5 w-5 text-gray-400" x-description="Heroicon name: solid/calendar" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
     </svg>
     <span class="text-gray-900 text-sm font-medium">Updated on
       {{ object.mod_date|date:'D, d M Y H:i' }}</span>
-  </div>
-</div>
-<div class="mt-6 border-t border-gray-200 py-6 space-y-8">
-  <div>
+  </section>
+</article>
+
+<article class="mt-6 border-t border-gray-200 py-6 space-y-8">
+  <section>
     <h2 class="text-sm font-medium text-gray-500">Author</h2>
     <ul role="list" class="mt-3 space-y-3">
       <li class="flex justify-start">
@@ -60,8 +61,9 @@
         </a>
       </li>
     </ul>
-  </div>
-  <div>
+  </section>
+
+  <section>
     <h2 class="text-sm font-medium text-gray-500">Tags</h2>
     <ul role="list" class="mt-2 leading-8">
       {% if not user.is_superuser %}
@@ -94,20 +96,25 @@
         {% endfor %}
       {% endif %}
     </ul>
-  </div>
+  </section>
 
-  <div>
+  <section>
     <h2 class="text-sm font-medium text-gray-500">Related content</h2>
     {% for e in similar_posts %}
-      {% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}
-        {% spaceless %}
-          <a class="font-semibold" href="{{ e.get_absolute_url }}">{{ e }}</a>
-          {% if not forloop.last %}
-            <span>,</span>{% endif %}
-        {% endspaceless %}
-      {% endif %}
-    {% endfor %}
-  </div>
+      <ul role="list" class="mt-2 leading-8">
+        {% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}
+          {% spaceless %}
+            <li class="inline">
+              <a href="{{ e.get_absolute_url }}" class="relative inline-flex items-center rounded-full border border-gray-300 px-3 py-0.5">
+                <div class="ml-3.5 text-sm font-medium text-gray-900">{{ e }}</div>
+              </a>
+              <!-- space -->
+            </li>
+          {% endspaceless %}
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </section>
 
   {% if object.series %}
     <div>
@@ -189,4 +196,4 @@
       </div>
     </dl>
   </div>
-</div>
+</article>
