--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -157,4 +157,8 @@
     .dropdown_item_active {
         @apply bg-gray-100 text-gray-900;
     }
+
+    .next_prev_buttons {
+        @apply inline-flex items-center px-2.5 py-1.5 sm:px-3 sm:py-2 border border-transparent text-xs sm:text-sm leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+    }
 }
