--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -121,9 +121,9 @@
                     </span>
                   {% else %}
                     {% if i == page_obj.paginator.ELLIPSIS %}
-                      <a class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">
+                      <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">
                         {{ i }}
-                      </a>
+                      </span>
                     {% else %}
                       <a href="{% relative_url i 'page' request.GET.urlencode %}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
                         {{ i }}
