--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -85,6 +85,7 @@
         </div>
         <aside class="hidden xl:block xl:pl-8">
           {% include 'tailwind/post_aside.html' %}
+        </aside>
       </div>
     </div>
   {% endif %}
