--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -1,5 +1,5 @@
 <div class="mt-4 flex space-x-3 md:mt-0">
-  <div class="mx-auto w-64 text-right">
+  <div class="mx-auto w-full text-right">
     <span class="relative z-0 inline-flex shadow-sm rounded-md text-left">
       <a href="{{ object.get_absolute_update_url }}" type="button" class="relative inline-flex items-center px-4 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500">
         Edit
