--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -381,7 +381,7 @@
                     <img class="h-10 w-10 rounded-full" src="{{ github.extra_data.avatar_url }}" loading="lazy" alt="User's Github account's profile picture">
                   </div>
                   <div class="flex-1 min-w-0">
-                    <a href="{{ github.extra_data.html_url }}" class="focus:outline-none">
+                    <a href="{{ github.extra_data.html_url }}" class="focus:outline-none" target="_blank">
                       <span class="absolute inset-0" aria-hidden="true"></span>
                       <p class="text-sm font-medium text-gray-900">
                         {{ github.extra_data.login }}
