Design, SB, Prose Admonitions

--- a/khoBlog/templates/tailwind/facts_flyout.html
+++ b/khoBlog/templates/tailwind/facts_flyout.html
@@ -24,7 +24,7 @@
             {% endif %}
           {% endif %}
             <div class="flex md:h-full lg:flex-col">
-              <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+              <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
                 <div>
                   <p class="text-base font-medium text-gray-900">
                     {{ o_fact.title }}
