--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -19,6 +19,14 @@
         @apply pagination_buttons rounded-l-md;
     }
 
+    .flyout_bottom_items {
+        @apply -m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100;
+    }
+
+    .mobile_menu_grid_items {
+        @apply rounded-md text-base font-medium text-gray-900 hover:text-gray-700;
+    }
+
     .profile-active-tab {
         @apply border-pink-500 text-gray-900;
     }
@@ -59,95 +67,85 @@
         @apply block;
     }
 
-    .prose details,
-    .prose .admonition {
-        @apply m-0 mb-2 w-3/4 overflow-hidden rounded-md pr-4;
-        /* width: 75%;
-        margin: 0 0;
-        margin-bottom: 0.5rem;
-        padding-right: 1rem;
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-        border-radius: 5px;
-        overflow: hidden; */
-
-        /* details,
-        p:not(.admonition-title) {
-            width: 100%;
-            margin-right: 0px !important;
-        } */
-
-        /* details {
-            margin: 0.5rem;
-        } */
-
-        /* & > :not(summary, details) {
-            padding: 0.5rem;
-            margin-bottom: 0;
-        } */
+    .prose :is(.admonition, summary, details) {
+        @apply mb-2 p-4;
     }
 
-    .prose summary,
-    .prose .admonition-title {
-        @apply relative -mr-4 block cursor-pointer rounded-md p-4 pl-9;
-        /* position: relative;
-        display: block;
-        margin-right: -1rem;
-        padding: 1rem;
-        padding-left: 2.2rem;
-        border-radius: 5px;
-        cursor: pointer; */
+    .prose .icon {
+        @apply inline-block align-middle mr-1;
     }
 
-    .prose .admonition-title {
-        @apply cursor-default rounded-none;
-        /* border-radius: 0 !important;
-        cursor: default; */
+    .prose .icon svg {
+        @apply inline-block h-5 w-5 stroke-0 mb-1;
     }
 
-    .prose summary:before {
-        @apply absolute top-5 left-4 rotate-0 border-l-2 border-solid border-white;
-        /* content: "";
-        border-width: 0.4rem;
-        border-style: solid;
-        border-color: transparent transparent transparent #fff;
-        position: absolute;
-        top: 1.3rem;
-        left: 1rem;
-        transform: rotate(0);
-        transform-origin: 0.2rem 50%;
-        transition: 0.25s transform ease; */
+    .prose summary > :last-child {
+        @apply mb-0;
     }
 
-    /* THE MAGIC 🧙‍♀️ */
-    .prose details[open] > summary {
-        border-radius: 5px 5px 0 0;
-
-        /* &:before {
-            transform: rotate(90deg);
-        } */
+    /* default for custom types */
+    .prose :is(.admonition, summary, details) {
+        @apply bg-purple-100 border-l-8 border-purple-600;
     }
 
-    .prose details summary::-webkit-details-marker {
-        display: none;
+    /** native types */
+    .prose :is(.caution, .warning, .attention) {
+        @apply bg-orange-100 border-l-8 border-orange-600;
     }
 
-    .prose details > ul {
-        padding-bottom: 1rem;
-        margin-bottom: 0;
+    .prose :is(.success, .check, .done) {
+        @apply bg-green-100 border-l-8 border-green-600;
     }
 
-    @media (max-width: 991.98px) {
-        .prose details {
-            width: 100%;
-        }
+    .prose :is(.question, .help, .faq) {
+        @apply bg-green-100 border-l-8 border-green-400;
     }
 
-    .flyout_bottom_items {
+    .prose :is(.failure, .fail, .missing) {
+        @apply bg-red-100 border-l-8 border-red-600;
+    }
+
+    .prose :is(.danger, .error) {
+        @apply bg-red-100 border-l-8 border-red-500;
+    }
+    .prose .bug {
+        @apply bg-pink-100 border-l-8 border-pink-500;
+    }
+
+    .prose :is(.tip, .hint, .important) {
+        @apply bg-teal-100 border-l-8 border-teal-500;
+    }
+
+    .prose :is(.info, .todo) {
+        @apply bg-blue-100 border-l-8 border-blue-500;
+    }
+
+    .prose :is(.abstract, .summary, .tldr) {
+        @apply bg-cyan-100 border-l-8 border-cyan-400;
+    }
+
+    .prose .note {
+        @apply bg-yellow-100 border-l-8 border-yellow-500;
+    }
+
+    .prose :is(.quote, .cite) {
+        @apply bg-gray-100 border-l-8 border-gray-500;
+    }
+
+    .prose :is(.admonition, summary, details) .icon svg {
+        @apply stroke-current fill-current;
+    }
+
+    .prose .flyout_bottom_items {
         @apply -m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100;
     }
 
-    .mobile_menu_grid_items {
+    .prose .mobile_menu_grid_items {
         @apply rounded-md text-base font-medium text-gray-900 hover:text-gray-700;
+    }
+
+    .prose h1 img {
+        @apply my-0 inline;
     }
 
     .dropdown_item {
