--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -50,7 +50,7 @@
             <div>
               <h1 class="text-2xl font-bold text-gray-900">{{ object.title }}</h1>
               <p class="mt-2 text-sm text-gray-500">
-                Post #{{ object.pk }} written by
+                Post <span class="font-bold">#{{ object.pk }}</span> written by
                 <!-- space -->
                 <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900">{{ object.author }}</a>
                 <!-- space -->
