--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -37,17 +37,17 @@
           </nav>
           <div class="flex items-center md:ml-12">
             {% if not user.is_authenticated %}
-              <a href="{% url 'account_login' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">
+              <a href="{% url 'account_login' %}" class="text-xs lg:text-base font-medium text-gray-500 hover:text-gray-900">
                 Log in
               </a>
-              <a href="{% url 'accounts:signup' %}" class="ml-8 inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
+              <a href="{% url 'accounts:signup' %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 lg:px-4 lg:py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
                 Sign up
               </a>
             {% else %}
-              <a href="{% url 'account_logout' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">
+              <a href="{% url 'account_logout' %}" class="text-xs lg:text-base font-medium text-gray-500 hover:text-gray-900">
                 Log out
               </a>
-              <a href="{% url 'accounts:profile' slug=user.slug %}" class="ml-8 inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
+              <a href="{% url 'accounts:profile' slug=user.slug %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 lg:px-4 lg:py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
                 Your Profile
               </a>
             {% endif %}
