--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -16,14 +16,7 @@
       {% for o_page in o_pages %}
         <a href="{{ o_page.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
           <div class="flex md:h-full lg:flex-col">
-            <div class="flex-shrink-0">
-              <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
-                </svg>
-              </span>
-            </div>
-            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
               <div>
                 <p class="text-base font-medium text-gray-900">
                   {{ o_page.title }}
@@ -42,14 +35,7 @@
       {% for o_post in o_posts %}
         <a href="{{ o_post.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
           <div class="flex md:h-full lg:flex-col">
-            <div class="flex-shrink-0">
-              <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
-                </svg>
-              </span>
-            </div>
-            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
               <div>
                 <p class="text-base font-medium text-gray-900">
                   {{ o_post.title }}
