--- a/khoBlog/templates/includes/nav/undernav.html
+++ b/khoBlog/templates/includes/nav/undernav.html
@@ -1,13 +1,11 @@
-{% load render_urls links_menu featured_post activeurl %}
+{% load render_urls links_menu featured_post %}
 
 <div class="nav-scroller shadow mb-1">
   {% comment %} {% endcomment %}
-  {% activeurl menu="no" parent_tag="self" %}
   <nav class="nav nav-underline d-flex justify-content-between">
     {% links_menu urls %}
     {% featured_big_post_list urls %}
     {% featured_post_list urls %}
     {% links urls %}
   </nav>
-  {% endactiveurl %}
 </div>
