--- a/khoBlog/templates/tailwind/more_flyout.html
+++ b/khoBlog/templates/tailwind/more_flyout.html
@@ -1,7 +1,7 @@
 {% load links_menu featured_post weblog %}
 
 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
-  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500" :class="{ 'text-gray-900': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
+  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group bg-white dark:bg-zinc-800 rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 dark:hover:text-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500" :class="{ 'text-gray-900': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
     <span>More</span>
     <svg x-state:on="Item active" x-state:off="Item inactive" class="ml-2 h-5 w-5 group-hover:text-gray-500 text-gray-400" :class="{ 'text-gray-600': open, 'text-gray-400': !(open) }" x-description="Heroicon name: solid/chevron-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
@@ -10,11 +10,11 @@
 
   <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'More' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg" x-ref="panel" @click.away="open = false" style="display: none;">
     <div class="absolute inset-0 flex">
-      <div class="bg-white w-1/2"></div>
-      <div class="bg-gray-50 w-1/2"></div>
+      <div class="bg-white dark:bg-zinc-800 w-1/2"></div>
+      <div class="bg-gray-50 dark:bg-zinc-900 w-1/2"></div>
     </div>
     <div class="relative max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2">
-      <nav class="grid gap-y-10 px-4 py-8 bg-white sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
+      <nav class="grid gap-y-10 px-4 py-8 bg-white dark:bg-zinc-800 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 uppercase">
             Read content
@@ -35,7 +35,7 @@
         </div>
       </nav>
 
-      <div class="bg-gray-50 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
+      <div class="bg-gray-50 dark:bg-zinc-900 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 uppercase">
             From the blog
