--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -106,7 +106,7 @@
           {% spaceless %}
             <li class="inline">
               <a href="{{ e.get_absolute_url }}" class="relative inline-flex items-center rounded-full border border-gray-300 px-3 py-0.5">
-                <div class="ml-3.5 text-sm font-medium text-gray-900">{{ e }}</div>
+                <div class="text-sm font-medium text-gray-900">{{ e }}</div>
               </a>
               <!-- space -->
             </li>
