--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -20,7 +20,7 @@
   {% endif %}
   <section>
     <a href="{{ object.get_absolute_url }}" class="mt-2 block">
-      <p class="text-xl font-semibold text-gray-900">
+      <p class="text-lg font-bold text-gray-900 dark:text-gray-200">
         {{ object }}
       </p>
     </a>
