--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -72,7 +72,7 @@
               {% endif %}
             </div>
             <div class="py-3 xl:pt-6 xl:pb-0">
-              <div class="prose lg:prose-lg xl:prose-xl">
+              <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
                 {% autoescape off %}
                   {{ page.content }}
                 {% endautoescape %}
