--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,7 +1,7 @@
 {% load static socialaccount analytical google_analytics_gtag tailwind_tags %}
 {% comment %} {% endcomment %}
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="dark">
 
   <head>
     <meta charset="UTF-8"/>
@@ -128,7 +128,7 @@
     {% include 'tailwind/menu.html' %}
 
     <main class="bg-white dark:bg-zinc-800 pt-8 pb-12 px-4 sm:px-6 lg:pt-16 lg:pb-20 lg:px-8">
-      <button onclick="toggleDarkMode()" type="button" class="flex ml-auto -mr-2 lg:-mr-4 -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" x-data="{ dark: false }" role="switch" @click="dark = !dark" x-state:on="Enabled" x-state:off="Not Enabled" :class="{ 'bg-indigo-600': dark, 'bg-gray-200': !(dark) }">
+      <button onclick="toggleDarkMode()" type="button" class="flex ml-auto -mr-2 lg:-mr-4 -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" x-data="{ dark: true }" role="switch" @click="dark = !dark" x-state:on="Enabled" x-state:off="Not Enabled" :class="{ 'bg-indigo-600': dark, 'bg-gray-200': !(dark) }">
         <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200 translate-x-0" x-state:on="Enabled" x-state:off="Not Enabled" :class="{ 'translate-x-5': dark, 'translate-x-0': !(dark) }"></span>
       </button>
 
