--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -3,7 +3,7 @@
 {% comment %} If the template is a list, show this, else hide it {% endcomment %}
 <section class="relative max-w-2xl mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
   <section>
-    <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl">
+    <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 dark:text-gray-300 sm:text-4xl">
       {{ title }}
     </h2>
     <div class="mt-3 sm:mt-4 lg:grid lg:grid-cols-2 lg:gap-5 lg:items-center">
