--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -105,7 +105,7 @@
             {% endif %}
           </section>
           <section class="py-3 xl:pt-6 xl:pb-0">
-            <section class="prose lg:prose-lg xl:prose-xl">
+            <section class="prose dark:prose-invert  lg:prose-lg xl:prose-xl">
               <h1>{{ project.title }}</h1>
               {% if project.learned %}
                 <div>
